--- a/index.html
+++ b/index.html
@@ -39,6 +39,45 @@
 
                     <div class="project_card">
                         <div class="card_image_container">
+                            <div class="card_image_container budgetDiv">
+                                <img class="project_img" src="./img/timeTrackerjpeg.jpeg">
+                                <div class="img_frontdrop">TRY OUT</div>
+                            </div>
+                        </div>
+
+                        <div class="project_dis">
+                            <h2>Time Tracking App</h2>
+                            <p>My time tracking application, built with React, allows you to create, delete, and update
+                                timers for different
+                                activities. With just one click, you can start tracking your progress in real-time.
+                                Creating a new timer is simple -
+                                just name your timer and start it. You can easily make changes to or delete timers as
+                                needed. My application is
+                                customizable and user-friendly, making it a great tool for managing your time and
+                                tracking your daily tasks.</p>
+                        </div>
+                    </div>
+
+                    <div class="project_card">
+                        <div class="card_image_container">
+                            <div class="card_image_container budgetDiv">
+                                <img class="project_img" src="./img/budgetBuddy.jpeg">
+                                <div class="img_frontdrop">TRY OUT</div>
+                            </div>
+                        </div>
+
+                        <div class="project_dis">
+                            <h2>Budget Buddy</h2>
+                            <p>Budget Buddy is a user-friendly and intuitive budget tracking application built with
+                                React. With this app, you can easily log your income and expenses and track your total
+                                balance. Its
+                                simple and clean interface makes
+                                it easy to view your spending habits.</p>
+                        </div>
+                    </div>
+
+                    <div class="project_card">
+                        <div class="card_image_container">
                             <div class="card_image_container CrazySnakeDiv">
                                 <img class="project_img" src="./img/project-img/crazySnake.jpg">
                                 <div class="img_frontdrop">TRY OUT</div>
@@ -47,11 +86,15 @@
 
                         <div class="project_dis">
                             <h2>CRAZY SNAKE</h2>
-                            <p>Crazy Snake is a slightly modified version of the well-known snake game. The goal is to
-                                navigate the snake and collect as much food as possible. Each time the snake eats, it
-                                gets a bit longer and the difficulty level increases. In my version the entire
-                                playground rotates. For this reason it is extremely difficult to navigate the snake
-                                correctly to the next food spot. Try it out!</p>
+                            <p>In this version of the popular snake game, the playground rotates as you play, making it
+                                even more challenging than the
+                                original. As you guide the snake to eat the apples and grow longer, you must also
+                                navigate the constantly shifting
+                                environment. The game requires quick reflexes and strategic thinking to avoid obstacles
+                                and stay on course as the world
+                                turns around you. With its dynamic gameplay and visually stunning effects, this snake
+                                game will put your skills to the
+                                test and keep you coming back for more. Are you up for the challenge?</p>
                         </div>
                     </div>
 
