--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                     <div class="project_card">
                         <div class="card_image_container">
-                            <div class="card_image_container budgetDiv">
+                            <div class="card_image_container timeTrackerDiv">
                                 <img class="project_img" src="./img/timeTrackerjpeg.jpeg">
                                 <div class="img_frontdrop">TRY OUT</div>
                             </div>
