--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
 
                     <div class="project_card">
                         <div class="card_image_container">
+                            <div class="card_image_container listsDnDDiv">
+                                <img class="project_img" src="./img/project-img/lists-dnd.png">
+                                <div class="img_frontdrop">TRY OUT</div>
+                            </div>
+                        </div>
+
+                        <div class="project_dis">
+                            <h2>Lists DnD</h2>
+                            <p>Lists DnD is a tool to manage tasks, similar to trello. The application can be used to
+                                create lists and tasks.
+                                With the drag and drop functionality it's possible to rearrange the content as desired.
+                                For the implementation
+                                I used react, redux and react-beautiful-dnd. I tried to give the UI a clean minimalistic
+                                look, I used TailwindCSS
+                                for that.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="project_card">
+                        <div class="card_image_container">
                             <div class="card_image_container timeTrackerDiv">
                                 <img class="project_img" src="./img/timeTrackerjpeg.jpeg">
                                 <div class="img_frontdrop">TRY OUT</div>
@@ -192,7 +213,9 @@
                             <li>HTML5</li>
                             <li>CSS3</li>
                             <li>JavaScript</li>
-                            <li>jQuery</li>
+                            <li>React</li>
+                            <li>Redux</li>
+                            <li>TailwindCSS</li>
                         </ul>
                     </div>
                     <div class="skill_card">
