ladders game added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
 
                     <div class="project_card">
                         <div class="card_image_container">
+                            <div class="card_image_container laddersGameDiv">
+                                <img class="project_img" src="./img/project-img/laddersGame.jpg">
+                                <div class="img_frontdrop">TRY OUT</div>
+                            </div>
+                        </div>
+
+                        <div class="project_dis">
+                            <h2>Ladders Game</h2>
+                            <p>
+                                The Ladders Game is a small challenge where you estimate the length of a ladder to reach the next block. The further you progress, the faster and more dynamic the game becomes, requiring greater concentration. I developed it using vanilla JavaScript with the Canvas API.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="project_card">
+                        <div class="card_image_container">
                             <div class="card_image_container listsDnDDiv">
                                 <img class="project_img" src="./img/project-img/lists-dnd.png">
                                 <div class="img_frontdrop">TRY OUT</div>
@@ -186,8 +202,7 @@
                 <h1>ABOUT</h1>
                 <div class="about_card">
                     <img class="profilePic" src="./img/portrait.jpg" alt="portrait">
-                    <p>Hi, I'm Patrick, an aspiring Frontend Developer. I just started this journey a year ago and
-                        I try to learn new things everyday to step up my skills to the next level.</p> <br>
+                    <p>Hello, I’m Patrick, and I’m currently studying Cyber Security at the University of Lübeck. Over the past few years, I’ve spent a lot of time working on frontend development, and on this page, I’d like to showcase some of my projects.</p> <br>
                     <p>To get the most out of my potential I'm currently looking for a company who wants to hire me so i
                         can work together with experienced developers and designers. If you're interested in a new team
                         member who is motivated and hard working, feel free to contact me.</p>
